src/test/bad/casting3.jb
int main() {
	bool_to_string("a");
}
